--- a/package.json
+++ b/package.json
@@ -18,6 +18,5 @@
   ],
   "author": "Niran Fajemisin (https://github.com/afajem)",
   "license": "MIT",
-  "dependencies": {
-  }
+  "dependencies": {}
 }
